# PyPowerSchool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/pypowerschool/: endpoints.py  powerschool.py
