[metadata]
name = pypowerschool
version = 0.1.1
author = Doug Penny
author_email = dpenny@icloud.com
description = Asychronous client for PowerSchool API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dougpenny/PyPowerSchool
project_urls =
    Bug Tracker = https://github.com/dougpenny/PyPowerSchool/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    httpx >= 0.22.0

[options.packages.find]
where = src